Returning back the old footer

--- a/style/style.css
+++ b/style/style.css
@@ -221,40 +221,20 @@ body {
 }
 
 .footer {
-  margin-top: 3rem;
-}
-
-.footer_up {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   background: #222;
-  padding: 0.6rem 0;
-}
-
-.footer_up img {
-  width: 6rem;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
-.footer_links {
-  list-style: none;
-}
-
-.footer_links li {
-  margin: 0.2rem;
-  color: #bbb;
-}
-
-.footer_down {
-  background: #111;
-  width: 100%;
-  padding: 0.5rem 0;
   font-size: 0.9rem;
+  margin-top: 3rem;
+  padding: 0.5rem 0;
+}
+
+.footer_flex {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -262,11 +242,11 @@ body {
       justify-content: space-around;
 }
 
-.footer_down p {
+.footer_flex p {
   color: white;
 }
 
-.footer_down p a {
+.footer_flex p a {
   color: pink;
 }
 
