--- a/style/components/_footer.scss
+++ b/style/components/_footer.scss
@@ -1,29 +1,13 @@
 .footer {
+    display: flex;
+    align-items: flex-end;
+    background: #222;
+    font-size: 0.9rem;
     margin-top: 3rem;
+    padding: 0.5rem 0;
 
-    &_up {
-        display: flex;
-        justify-content: space-evenly;
-        background: #222;
-        padding: 0.6rem 0;
-        & img {
-            width: 6rem;
-            object-fit: contain;
-        }
-    }
-    &_links {
-        list-style: none;
-        & li {
-            margin: 0.2rem;
-            color: #bbb;
-        }
-    }
-
-    &_down{
-        background: #111;
+    &_flex{
         width: 100%;
-        padding: 0.5rem 0;
-        font-size: 0.9rem;
         display: flex;
         justify-content: space-around;
         & p{
